[package]
name = "bloom-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_regex = "0.16.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
itertools = "0.11.0"
getrandom = { version = "0.2.10", optional = true}
siphasher = "0.3.10"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
bloomfilter = "1.0.12"

[[bench]]
name = "bench_main"
harness = false

[features]
default = ["random"]
random = ["getrandom"]