[package]
name = "b100m-filter"
version = "0.1.1"
edition = "2021"
authors = ["Thomas Pendock"]
description = "Bloom Filter for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/thomaspendock/bloom-filter"
repository = "https://github.com/thomaspendock/bloom-filter"
keywords = ["bloom", "filter", "data-structures", "bloom-filter", "bloomfilter"]
categories = ["data-structures", "caching", "algorithms"]
readme = "README.md"

[dependencies]
getrandom = { version = "0.2.10", optional = true}
siphasher = "0.3.10"

[dev-dependencies]
rand_regex = "0.16.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
itertools = "0.11.0"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "bench_main"
harness = false

[features]
default = ["random"]
random = ["getrandom"]
